# academic-records-audit

./: .gitignore  README.md  THESIS_DOCUMENTATION.md  ai-query-plan.md  log.txt  pyproject.toml  test
reports/: estudiantes-materias.csv
src/academic_audit/: __init__.py  cli.py  config.py  convert.py  convert_inscripcion.py  database.py  document_resolver.py  eligibility.py  extract.py  extract_inscripcion.py  gui.py  pipeline.py  query.py  report.py  student_stats.py  study_plan.py
src/academic_audit/parsers/: __init__.py  inscripcion.py  transcript.py  unefa.py
src/academic_audit/web/: app.py  tasks.py
src/academic_audit/web/static/: app.js  style.css
src/academic_audit/web/static/data/: audit.db
src/academic_audit/web/static/reports/: elegibilidad.csv  estudiantes-materias.csv
src/academic_audit/web/templates/: index.html
src/academic_audit/web/templates/tabs/: _param_rows.html  _prereq_table.html  _subjects_table.html  eligibility.html  parameters.html  pipeline.html  query.html  reports.html  study_plan.html
tests/: conftest.py  sample_transcript.md  test_document_resolver.py  test_eligibility.py  test_report.py  test_student_stats.py  test_unefa_parser.py
tests/fixtures/: unefa_vasquez.md
