[project]
name = "academic-records-audit"
version = "0.1.0"
description = "Convierte expedientes académicos en PDF a Markdown y extrae datos a SQLite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markitdown[pdf]>=0.1.0",
]

[project.scripts]
academic-audit = "academic_audit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/academic_audit"]
