[project]
name = "academic-records-audit"
version = "0.1.0"
description = "Convierte expedientes académicos en PDF a Markdown y extrae datos a SQLite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markitdown[pdf]>=0.1.0",
    "xlrd>=2.0.0",
    "gradio>=5.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
]

[project.scripts]
academic-audit = "academic_audit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/academic_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

